--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -5,31 +5,32 @@
     android:viewportWidth="108"
     android:viewportHeight="108">
 
-    <!-- Grupo centralizado para facilitar ajustes -->
+    <!-- Grupo para centralizar e escalar todos os elementos internos -->
     <group
         android:pivotX="54"
         android:pivotY="54"
-        android:scaleX="0.65"
-        android:scaleY="0.65"
-        android:translateX="0"
-        android:translateY="0">
+        android:scaleX="0.8"
+        android:scaleY="0.8">
 
-        <!-- Forma Verde (L) -->
+        <!-- 1. A Forma de "Gota" Grande (Fundo Translúcido) -->
         <path
-            android:fillColor="@color/icon_shape_green_light"
-            android:pathData="M35,35 L65,35 A30,30 0 0 1 35,65 Z" />
-        <path
-            android:fillColor="@color/icon_shape_green_dark"
-            android:pathData="M35,65 L35,90 L65,90 L65,65 Z" />
+            android:fillColor="@color/icon_app_overlay"
+            android:pathData="M54,18 C34.12,18 18,34.12 18,54 C18,73.88 34.12,90 54,90 C62.5,90 70.2,87.3 76,82.8 L54,102 L32,82.8 C26.7,87.3 19.5,90 18,90 C18,73.88 34.12,18 54,18 Z" />
 
-        <!-- Círculo Azul -->
+        <!-- 2. Ícone da Bomba de Combustível (Branco) -->
         <path
-            android:fillColor="@color/icon_circle_blue"
-            android:pathData="M72,45 A22,22 0 1,0 72,89 A22,22 0 1,0 72,45 Z" />
+            android:fillColor="@color/icon_app_foreground"
+            android:pathData="M48,36 h-4 c-1.1,0 -2,0.9 -2,2 v24 c0,1.1 0.9,2 2,2 h4 c1.1,0 2,-0.9 2,-2 v-24 c0,-1.1 -0.9,-2 -2,-2z M58,38 v12 c0,1.1 -0.9,2 -2,2 h-1 v-16 h1 c1.1,0 2,0.9 2,2z" />
 
-        <!-- Ícone do Carro (Simplificado) -->
+        <!-- 3. A Bolha Pequena do Carro (Fundo Translúcido) -->
         <path
-            android:fillColor="@color/icon_car_white"
-            android:pathData="M65,62 L79,62 L77,58 C76.5,57 75,56 74,56 L70,56 C69,56 67.5,57 67,58 Z M64,64 L64,71 C64,72 65,72 65,72 L66,72 C66,72 66,71 66,70 L66,69 L78,69 L78,70 C78,71 78,72 79,72 L80,72 C80,72 81,72 81,71 L81,64 C81,63 80,62 79,62 L65,62 C64,62 64,63 64,64 Z M67,66 A1,1 0 1,1 67,68 A1,1 0 1,1 67,66 Z M77,66 A1,1 0 1,1 77,68 A1,1 0 1,1 77,66 Z" />
+            android:fillColor="@color/icon_app_overlay"
+            android:pathData="M84,68 A10,10 0 1,1 64,68 A10,10 0 1,1 84,68" />
+
+        <!-- 4. Ícone do Carro (Branco) -->
+        <path
+            android:fillColor="@color/icon_app_foreground"
+            android:pathData="M76,66 l-1,-2 h-6 l-1,2 h-2 v3 h1.5 v1 h7 v-1 h1.5 v-3 h-2z" />
+
     </group>
 </vector>
